--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@tailwindcss/vite": "^4.1.10",
+    "axios": "^1.10.0",
     "chart.js": "^4.4.9",
     "chartjs-plugin-annotation": "^3.1.0",
     "framer-motion": "^12.18.1",
